src/components/Modal/Modal.css
.modal {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  padding: 5rem 0;
}

.modal-body {
  position: absolute;
  padding: 2rem;
  width: 50vw;
  border-radius: 5px;
  background-color: #fff;
  text-align: center;
}

.modal__close-btn {
  position: absolute;
  right: -20px;
  top: -20px;
  border: none;
  background-color: #000;
  color: #fff;
  font-size: 30px;
  font-weight: bold;
  height: 40px;
  width: 40px;
  border-radius: 50%;
  outline: none;
  cursor: pointer;
}

